--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # =============================
+# ARQUIVOS IGNORADOS PELO GIT
+# =============================
+
+# =============================
 # SISTEMA OPERACIONAL
 # =============================
 .DS_Store
